--- a/mystyle.css
+++ b/mystyle.css
@@ -180,7 +180,7 @@ display: none;
 color: white;
 width: 700px;
 font-size: 40px;
-top: 1000px;
+bottom: 200px;
 /* background-color: #ffffff; */
 }
 
